--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,7 +16,9 @@
 	<body>
 		<nav class="top-bar" role="navigation">
 			<ul class="title-area">
-				<li class="toggle-topbar menu-icon"><a href=""><span></span></a></li>
+				<li class="toggle-topbar menu-icon">
+					<a href=""><span>Menu</span></a>
+				</li>
 			</ul>
 
 			<section class="top-bar-section">
