chore(*): user login and register finished

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,6 +11,7 @@
 		<title></title>
 
 		<link rel="stylesheet" href="css/app.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -29,6 +30,9 @@
 				</ul>
 
 				<ul class="right">
+					<li ui-sref-active="active">
+						<a ui-sref="user.login">Login</a>
+					</li>
 					<li ui-sref-active="active">
 						<a ui-sref="user.create">Register</a>
 					</li>
