chore(*): posts area implemented

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -34,8 +34,14 @@
 				</ul>
 
 				<ul if-logged class="right">
-					<li ui-sref-active="active">
-						<a ui-sref="user.profile">Profile</a>
+					<li class="has-dropdown">
+						<a href=""><img src="http://placehold.it/24x24" style="border-radius:100%"> victorqueiroz</a>
+
+						<ul class="dropdown">
+							<li ui-sref-active="active">
+								<a ui-sref="user.profile">Profile</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 
