--- a/sources/javascripts/scripts/paste/paste.scss
+++ b/sources/javascripts/scripts/paste/paste.scss
@@ -1,60 +1,20 @@
 @import "../../../stylesheets/app";
 
-.arrow {
-	position: absolute;
-	width: 26px;
-	top: 0px;
-	min-height: 29px;
-	color: rgba(255, 255, 255, .40);
-	background-color: #333333;
+body {
+	overflow-x: hidden;
 }
 
-.editor-leftbar {
-	width: 200px;
-	position: absolute;
-	padding: 0;
-	margin: 0;
-	left: 0;
-	top: 0;
-	background-color: #333333;
-	z-index: 9999;
-	transform: translateX(0px);
-	transition: 0.3s all;
-	height: 100%;
-
-	&.ng-enter,
-	&.ng-enter-active,
-	&.ng-leave,
-	&.ng-leave-active {
-		transition: 0.5s all;
-		display: block;
-	}
-
-	&.ng-enter {
-		transform: translateX(-200%) scale3d(0.95, 0.9, 0.9);
-
-		&.ng-enter-active {
-			transform: translateX(0%) scale3d(1, 1, 1);
-		}
-	}
-
-	&.ng-leave {
-		transform: translateX(0%) scale3d(1, 1, 1);
-
-		&.ng-leave-active {
-			transform: translateX(-200%) scale3d(0.95, 0.9, 0.9);
-		}
-	}
+.editor-topbar,
+.editor-column {
+	padding: 0 !important;
 }
 
-.paste-row {
-	.editor-column {
-		@include grid-column(
-			$columns: 12,
-			$offset: 0,
-			$push: 0,
-			$pull: 0
-		);
-		padding: 0;
-	}
+.editor-topbar {
+	background-color: #333333;
+
+	@include grid-column(12);
+}
+
+.editor-column {
+	@include grid-column(12);
 }
