--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,7 +25,9 @@
 			<section class="top-bar-section">
 				<ul class="left">
 					<li ui-sref-active="active">
-						<a ui-sref="home.index">Home</a>
+						<a ui-sref="post.list">
+							<i class="fa fa-home"></i>
+						</a>
 					</li>
 
 					<li ui-sref-active="active">
