chore(post-detail): comments anchor implemented

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -60,6 +60,8 @@
 
 		<div ui-view></div>
 
+		<footer></footer>
+
 		<script src="js/angular-io.js"></script>
 		<script src="lib/codemirror/addons.js"></script>
 		<script src="lib/codemirror/modes.js"></script>
