--- a/sources/javascripts/scripts/paste/paste.scss
+++ b/sources/javascripts/scripts/paste/paste.scss
@@ -4,17 +4,33 @@ body {
 	overflow-x: hidden;
 }
 
-.editor-topbar,
-.editor-column {
-	padding: 0 !important;
-}
+.editor-row {
+	@include grid-row();
 
-.editor-topbar {
-	background-color: #333333;
+	.editor-leftcolumn {
+		@include grid-column(4);
 
-	@include grid-column(12);
-}
+		border-style: solid;
+		border-width: 1px;
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 4px;
+		border-color: rgba(0,0,0,.03) rgba(0,0,0,.04) rgba(0,0,0,.15);
+		box-shadow: 0px 4px 7px -7px rgba(0,0,0,.6);
 
-.editor-column {
-	@include grid-column(12);
+		.editor-leftcolumn-side-nav {
+			@include side-nav();
+
+			input, textarea {
+				&:focus,
+				&:active,
+				&:hover {
+					border-color: rgba(0,0,0,.08);
+				}
+			}
+		}
+	}
+
+	.editor-column {
+		@include grid-column(8);
+	}
 }
