--- a/sources/javascripts/scripts/post/post-list/post-list.scss
+++ b/sources/javascripts/scripts/post/post-list/post-list.scss
@@ -1,27 +1,56 @@
 @import "../../../../stylesheets/app";
 
+.post-list-row section .post-cards-list article {
+	border-style: solid;
+	border-width: 1px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-color: rgba(0,0,0,.03) rgba(0,0,0,.04) rgba(0,0,0,.15);
+}
+
 .post-list-row {
 	@include grid-row();
 
 	aside {
-		@include grid-column(2);
+		@media #{$small-only} {
+			@include grid-column(12);
+		}
+
+		@media #{$large-only} {
+			@include grid-column(4);
+		}
+
+		ul {
+			@include side-nav();
+		}
 	}
 
 	section {
-		@include grid-column(10);
+		@media #{$large-only} {
+			@include grid-column(8);
+		}
+
+		@media #{$small-only} {
+			@include grid-column(12);
+		}
 
 		.post-cards-list {
-			@include grid-row();
+			@include grid-row($behavior: nest);
 
 			article {
 				@include grid-column(12);
 
-				box-shadow: 0px 3px 7px -7px rgba(0,0,0,.30);
-				border-style: solid;
-				border-radius: 4px;
-				border-width: 1px;
-				border-color: rgba(0,0,0,0.01) rgba(0,0,0,0.02) rgba(0,0,0,.1) rgba(0,0,0,.03);
-				padding: 12px 10px 12px 10px;
+				img {
+					float: left;
+					padding: 6px;
+				}
+
+				.info {
+				}
+
+				border-top-left-radius: 4px;
+				border-top-right-radius: 4px;
+				padding: 10px 5px 10px 5px;
 				margin: 0px 0px 10px 0px;
 
 				.comment-counter {
@@ -34,7 +63,7 @@
 					}
 				}
 
-				.status {
+				.label {
 					padding: 2px;
 					background-color: rgba(0,0,0,.03);
 					border-radius: 4px;
@@ -44,14 +73,16 @@
 					border-color: rgba(0,0,0,.01) rgba(0,0,0,.02) rgba(0,0,0,.09);
 					-webkit-user-select: none;
 					color: rgba(0,0,0,.70);
+					margin-right: 4px;
 				}
 			}
 		}
 	}
 
 	.filter {
-		@include sub-nav();
-
+		margin-top: $sub-nav-list-padding-top;
 		padding-bottom: $sub-nav-list-padding-top;
+
+		@include sub-nav();
 	}
 }
