--- a/sources/stylesheets/_settings.scss
+++ b/sources/stylesheets/_settings.scss
@@ -79,9 +79,9 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
+$row-width: rem-calc(1200);
 // $total-columns: 12;
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(18);
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -113,7 +113,7 @@ $red 				 : #F25252;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
 // $oil         : #333333;
-// $jet         : #222222;
+$jet         : #222222;
 $black       : rgba(0,0,0,.50);
 
 // We use these as default colors throughout
@@ -199,10 +199,10 @@ $global-radius: 3px;
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-// $header-font-color: $jet;
+$header-font-color: $jet;
 // $header-line-height: 1.4;
-// $header-top-margin: .2rem;
-// $header-bottom-margin: .5rem;
+$header-top-margin: .2rem;
+$header-bottom-margin: .1rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
@@ -225,12 +225,12 @@ $global-radius: 3px;
 // $subheader-line-height: 1.4;
 // $subheader-font-color: scale-color($header-font-color, $lightness: 35%);
 // $subheader-font-weight: $font-weight-normal;
-// $subheader-top-margin: .2rem;
-// $subheader-bottom-margin: .5rem;
+$subheader-top-margin: .2rem;
+$subheader-bottom-margin: .2rem;
 
 // A general <small> styling
 // $small-font-size: 60%;
-// $small-font-color: scale-color($header-font-color, $lightness: 35%);
+$small-font-color: scale-color($header-font-color, $lightness: -20%);
 
 // We use these to style paragraphs
 // $paragraph-font-family: inherit;
